Update index.html and database

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Welcome to the Main Page</h1>
-<p>This is the main content of the page.</p>
+<h1>Main Page</h1>
+<p>Login to see information</p>
 
 {{products}}
 {% endblock content %}
