--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form method="post">
-    {% csrf_token %}
+<form method="get">
     {{search}}
     <button>Filter</button>
 </form>
