Update index.html and database

--- a/templates/products/user_products.html
+++ b/templates/products/user_products.html
@@ -6,8 +6,10 @@
 
 {% block content %}
 <h1>My Products</h1>
-{% for p in product.items.all %}
+{{product}}
 <ol>
+{% for p in product.items.all %}
+
     <li>
         {% for c in p.product.image.all %}
         <img src="{{c.image.url}}" alt="#image" style="width: 140px; height: 120px;">
@@ -15,12 +17,7 @@
         <p>name: {{p.product.name}}</p>
        
         <p>price: {{p.product.price}}$</p>
-        <p>rating: {{p.product.rate}}</p>
-        <form method="post">
-            {% csrf_token %}
-            <p>quantity: {{form.as_p}}</p>
-            <button>Save quantity</button>
-        </form>
+        <p>rating: {{p.product.stars}}</p>
         <a href="">Buy</a>
         <br>
         
