Update index.html and database

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -15,6 +15,7 @@
         <button>login</button>
       </form>
     </div>
+    <a href="{% url 'index' %}">Back Home</a>
     {% endblock content %}
   </body>
 </html>
