Update index.html and database

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,14 +70,15 @@
                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
+            <form method="get" class="d-flex" role="search">
               <input
+                name="q"
                 class="form-control me-2"
                 type="search"
                 placeholder="Search"
                 aria-label="Search"
               />
-              <button class="btn btn-outline-success" type="submit">
+              <button class="btn btn-outline-success" type="submit" >
                 Search
               </button>
             </form>
